# testify

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  PRD.md  SRS.md  TECH_STACK.md
testify/: __main__.py
testify/cli/: commands.py  main.py
testify/generator/: code_generator.py
testify/generator/templates/: cypress_page.jinja2  cypress_spec.jinja2  playwright_page.jinja2  playwright_spec.jinja2
testify/llm/: __init__.py  client.py  config.py  schemas.py
testify/parser/: __init__.py  input_parser.py
testify/writer/: __init__.py  output_writer.py
tests/: test_cli.py  test_code_generator.py  test_input_parser.py  test_integration.py  test_llm_client.py  test_output_writer.py
