[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "testify"
version = "0.1.0"
description = "From spec to test. Generate Playwright/Cypress tests from acceptance criteria."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "testify contributors" },
]
keywords = ["testing", "playwright", "cypress", "qa", "llm", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "jinja2>=3.1.0",
    "tenacity>=8.0.0",
    "pyyaml>=6.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/yourusername/testify"
Documentation = "https://github.com/yourusername/testify#readme"
Issues = "https://github.com/yourusername/testify/issues"
Source = "https://github.com/yourusername/testify"

[project.scripts]
testify = "testify.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "vcrpy>=6.0.0",
    "ruff>=0.5.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[tool.setuptools.packages.find]
include = ["testify*"]

[tool.setuptools.package-data]
testify = ["generator/templates/*.jinja2"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
